--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "ws": "^8.14.2"
   }
 }
