--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "grass-node",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "monitor": "node monitor.js"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "winston": "^3.10.0",
+    "chalk": "^5.3.0",
+    "https-proxy-agent": "^7.0.2",
+    "uuid": "^9.0.1",
     "ws": "^8.14.2"
   }
 }
